<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3C0E7"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:srcCompat="@mipmap/account" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_altas"/>

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_bajas"/>

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_cambios"/>

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_consultas"/>

</LinearLayout>



